# Ghala

./: .gitignore
Mobile/screens/: BridgeScreen.tsx  HomeScreen.tsx  MintScreen.tsx  SendScreen.tsx
Mobile/services/: ICPBridgeService.ts
icp_bridge/: CONFIGURE_BRIDGE.md  DEPLOYMENT_NOTES.md  DEPLOYMENT_STATUS.md  deploy-solana.sh  deploy.sh  test-workflow.sh  verify-deployment.sh
icp_bridge/src/bridge_canister/: Cargo.toml  bridge.did
icp_bridge/src/bridge_canister/src/: lib.rs
icp_bridge/src/btc_canister/: Cargo.toml  btc_handler.did
icp_bridge/src/btc_canister/src/: lib.rs
icp_bridge/src/declarations/solana_canister/: solana_canister.did.d.ts  solana_canister.did.js
icp_bridge/src/solana_canister/: Cargo.toml  build.rs  solana_rpc.did
icp_bridge/src/solana_canister/src/: lib.rs
